--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 data-science-0/.ipynb_checkpoints
 data-science-0/.pytest_cache
 data-science-0/venv
+coestatistica-1/.ipynb_checkpoints
+coestatistica-1/.pytest_cache
+coestatistica-1/venv
