--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ data-science-0/venv
 coestatistica-1/.ipynb_checkpoints
 coestatistica-1/.pytest_cache
 coestatistica-1/venv
+data-science-1/.ipynb_checkpoints
+data-science-1/.pytest_cache
+data-science-1/venv
