--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ coestatistica-1/venv
 data-science-1/.ipynb_checkpoints
 data-science-1/.pytest_cache
 data-science-1/venv
+data-science-2/.ipynb_checkpoints
+data-science-2/.pytest_cache
