--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ data-science-1/.pytest_cache
 data-science-1/venv
 data-science-2/.ipynb_checkpoints
 data-science-2/.pytest_cache
+data-science-3/.ipynb_checkpoints
+data-science-3/.pytest_cache
