--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ data-science-2/.ipynb_checkpoints
 data-science-2/.pytest_cache
 data-science-3/.ipynb_checkpoints
 data-science-3/.pytest_cache
+data-science-4/.ipynb_checkpoints
+data-science-4/.pytest_cache
