--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ data-science-3/.ipynb_checkpoints
 data-science-3/.pytest_cache
 data-science-4/.ipynb_checkpoints
 data-science-4/.pytest_cache
+enem-2/.ipynb_checkpoints
+enem-2/.pytest_cache
